--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />    <title>FihrProgramin</title>
+    />    <title>FihrPrograming</title>
   </head>
   <body>
     <div id="root"></div>
